...
        ),
        Screen(
            name: "Map Example",
            destination: Destination.Map()
        ),
        Screen(
            name: "🏬 Store Overflow",
            destination: Destination.StoreSplash()
        ),
        Screen(
            name: "`TestUtils` UI Tests Demo",
            destination: Destination.TestUtilsUITestsDemo()
        ),
...
